fix z-index

--- a/src/styles/double-element.css
+++ b/src/styles/double-element.css
@@ -15,4 +15,9 @@
     position: relative;
     z-index: 2;
   }
+
+  .el-back,
+  .el-front {
+    transform: translate3d(0, 0, 0);
+  }
 }
